fixed spacing issues on mobile

--- a/index.css
+++ b/index.css
@@ -32,13 +32,12 @@
     @apply bg-black/30;
     @apply backdrop-blur-sm;
     @apply backdrop-brightness-200;
-    @apply px-10;
+    @apply px-4;
+    @apply md:px-10;
     @apply py-6;
     @apply my-8;
     @apply rounded-lg;
-    @apply text-center;
     @apply md:text-2xl;
-    @apply md:text-left;
   }
 
   ul {
@@ -48,7 +47,7 @@
   }
 
   li {
-    @apply pb-6;
+    @apply pt-6;
     @apply pl-0;
     @apply text-lg;
     @apply md:pl-1;
